--- a/styles/variables.css
+++ b/styles/variables.css
@@ -2,3 +2,14 @@
   Переменные для вашего проекта
   и их переопределение под различные устройства
 */
+:root {
+  --bcg-color: #000028;
+  --title-color: #db00ff;
+  --shadow-color: #ff0070;
+  --section-color-frame: #ff0070;
+  --section-color-title: #ff0070;
+  --section-color-title-frame: #000028;
+  --text-description-color: #f1b2ce;
+  --color-hover: #ff007066;
+  --cover-image: url(../images/cover-image-dark.png);
+}
