--- a/styles/style.css
+++ b/styles/style.css
@@ -1,310 +1,386 @@
 /* Основные стили проекта. Это стили для темы, которую вы верстаете первой. */
 .page {
-    background-image: url(../images/cover-image-dark.png);
-    background-position: center;
-    background-size: cover;
+    background-image: var(--bg-image);
+    background-color: var(--bg-color);
+    background-repeat: no-repeat;
     background-attachment: fixed;
-    font-family: "IBM Plex Mono", monospace;
-}
-
-.header {
+    background-position: center;
+    font-family: var(--main-font, monospace);
+    background-size: cover;
+  }
+  
+  .text_content {
+    color: var(--text-color);
+    font-size: 18px;
+    font-weight: 400;
+    line-height: 130%;
+  }
+  
+  .section_title {
+    color: var(--section-title-color);
+    font-weight: 700;
+    margin-block-end: 20px;
+  }
+  
+  .title_decor {
+    background-color: var(--accent-color);
+    font-weight: 700;
+    color: var(--title-color);
+  }
+  
+  .li_title_decor {
+    font-weight: 400;
+  }
+  
+  .content-section {
+    padding: 10px 10px;
+  }
+  
+  .content-section {
+    margin-block-end: 30px;
+  }
+  
+  .header_title {
+    color: var(--header-color, #db00ff);
+    text-shadow: 4px 4px 0px var(--accent-color);
+    font-size: clamp(7.25rem, 7.0115rem + 1.0178vw, 7.5rem);
+    font-weight: 700;
+    line-height: 82.5%;
+  }
+  
+  .header__theme-menu-button {
+    border: transparent;
+    padding: 0;
+    color: var(--section-title-color);
+    font-size: 18px;
+    background-color: transparent;
+    cursor: pointer;
+    text-transform: lowercase;
+  }
+  
+  .header__theme-menu-button_active {
+    padding: 0px 13px;
+    outline: 1px solid var(--section-title-color);
+  }
+  
+  .header {
     display: grid;
-    grid-template-rows: 1fr auto 1fr;
-    block-size: 100vh;
-    justify-items: end;
-    align-items: center;
-    font-family: var(--font-family);
-    padding: var(--gap, 20px);
+    grid-template-rows: 0 1fr min-content 1fr;
+    min-block-size: 100vh;
+  }
+  
+  .header__theme-menu {
+    justify-self: flex-end;
+    align-self: center;
+    margin-block-start: -6px;
+  }
+  
+  .header__theme-menu-list {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    gap: 13px;
+  }
+  
+  .header__theme-menu-item {
+    text-align: center;
+  }
+  
+  .header_title {
+    align-self: center;
+    justify-self: flex-start;
+  }
+  
+  .header_title:last-child {
+    text-align: center;
+  }
+  
+  .header_paragraph {
+    margin-block-start: 56px;
+    margin-block-end: 56px;
+    align-self: center;
+    justify-self: flex-end;
+  }
+  
+  .header_paragraph span:first-of-type {
+    display: inline-block;
+  }
+  
+  .decorated-zone {
     position: relative;
-    min-height: 668px;
-}
-
-.decorated-zone::before,
-.decorated-zone::after {
+  }
+  
+  .decorated-zone::before {
     content: "";
     position: absolute;
+    justify-self: flex-end;
+    inset-inline-end: 10px;
+    inset-block-start: 10px;
+    border-top: 1px solid var(--section-title-color);
+    border-right: 1px solid var(--section-title-color);
     inline-size: 25px;
     block-size: 25px;
-}
-
-.decorated-zone::before {
-    border-right: 1px solid var(--menu-color);
-    border-top: 1px solid var(--menu-color);
-    top: var(--gap, 20px);
-    right: var(--gap, 20px);
-}
-
-.decorated-zone::after {
-    border-left: 1px solid var(--menu-color);
-    border-bottom: 1px solid var(--menu-color);
-    bottom: var(--gap, 20px);
-    left: var(--gap, 20px);
-}
-
-.title-decor {
-    color: var(--header-color);
-    background-color: var(--accent-color);
-}
-
-.header__theme-menu {
-    justify-self: center;
-    align-self: start;
-}
-
-.header__theme-menu-list {
-    display: flex;
-    flex-direction: row;
-    gap: 10px;
-}
-
-.header__theme-menu-button {
-    appearance: none;
-    background-color: transparent;
-    border: 1px solid transparent;
-    color: var(--menu-color);
-    text-transform: lowercase;
-    cursor: pointer;
-    padding: 0 13px;
-    position: relative;
-    font-size: var(--font-size, 18px);
-}
-
-.header__theme-menu-button:hover {
-    cursor: pointer;
-    outline: 1px solid var(--menu-color);
-}
-
-.header__theme-menu-button_active {
-    pointer-events: none;
-}
-
-.title {
-    font-size: clamp(7.5rem, 0.5625rem + 14.4531vw, 9.8125rem);
-    color: var(--header-title-color);
-    text-shadow: 4px 4px 0 var(--accent-color);
-    line-height: 82.5%;
-    font-family: var(--font-family);
-}
-
-.header__title {
-    justify-self: start;
-    margin-inline-start: calc(-1 * var(--gap));
-}
-
-.header__text {
-    font-weight: bold;
-    font-size: var(--font-size, 18px);
-    inline-size: 50%;
-    line-height: var(--line-height, 130%);
-}
-
-.header__rec {
-    position: absolute;
-    align-self: start;
-    justify-self: end;
-    text-transform: uppercase;
-    color: var(--menu-color);
-    top: 23px;
-    right: 48px;
-    font-size: var(--font-size, 18px);
-}
-
-.header__rec::after {
+  }
+  
+  .decorated-zone::after {
     content: "";
     position: absolute;
-    left: 41px;
-    top: 4px;
-    border: 1px solid var(--accent-color);
-    border-radius: 50%;
-    inline-size: 10px;
-    block-size: 10px;
-    background-color: var(--accent-color);
-    box-shadow: 0 0 3px 3px var(--accent-color);
-}
-
-.main {
-    font-size: var(--font-size, 18px);
-    line-height: var(--line-height, 130%);
-    padding: 60px var(--gap, 20px);
-    font-family: var(--font-family, "IBM Plex mono", monospace);
-}
-
-.section {
-    display: grid;
-    grid-template-columns: 1fr 2fr;
-    gap: 10px;
-}
-
-.content__text-box {
-    gap: 20px 10px;
-}
-
-.section:not(:last-of-type) {
-    margin-bottom: 80px;
-}
-
-.section__title {
-    font-size: var(--font-size, 18px);
-    line-height: var(--line-height, 130%);
-    color: var(--section-title, #ff0070);
-}
-
-.articles {
-    display: grid;
-    gap: 20px;
-}
-
-.articles-content {
-    display: grid;
-    gap: 20px;
-    grid-template-columns: repeat(3, 1fr);
-    grid-column: 1/-1;
-    align-items: start;
-}
-
-.article__list {
-    display: grid;
-    gap: 20px;
-}
-
-.article {
-    display: grid;
-    gap: 10px;
-}
-
-.article__title {
-    font-size: var(--font-size, 18px);
-}
-
-.article__subheader {
-    font-weight: normal;
-}
-
-.article__text {
-    color: var(--article-text-color, #f1b2ce);
-    font-size: var(--font-size, 18px);
-    line-height: var(--line-height, 130%);
-}
-
-.article__link {
-    text-decoration: none;
-    text-shadow: 2px 2px 0 var(--accent-color, #ff0070);
-}
-
-.article__link:hover {
-    border-block-end: 1px solid var(--article-text-color, #f1b2ce);
-}
-
-.article__link:focus {
-    outline: none;
-}
-
-.article__link:focus-visible {
-    outline: 1px solid var(--article-text-color, #f1b2ce);
-}
-
-.gallery {
-    display: grid;
-    gap: var(--gap, 20px);
-}
-
-.pictures-grid {
-    display: grid;
-    grid-template-columns: repeat(3, minmax(196px, 1fr));
-    gap: var(--gap, 20px);
-}
-
-.picture {
-    display: block;
-    width: 100%;
-    height: 100%;
-    object-fit: cover;
-}
-
-.picture-vertical {
-    grid-row: span 2;
-}
-
-.picture-horizontal {
-    grid-column: span 2;
-}
-
-.picture-square {
-    grid-column: span 1;
-    grid-row: span 1;
-}
-
-.footer {
-    display: grid;
+    justify-self: flex-start;
+    inset-inline-start: 10px;
+    inset-block-end: 10px;
+    border-bottom: 1px solid var(--section-title-color);
+    border-left: 1px solid var(--section-title-color);
+    inline-size: 25px;
+    block-size: 25px;
+  }
+  
+  .header_item {
+    justify-self: flex-end;
     position: relative;
-    justify-items: center;
+  }
+  
+  .header_item::before {
+    content: "REC";
+    position: absolute;
+    font-family: var(--main-font, monospace);
+    font-size: 18px;
+    color: var(--accent-color);
+    inset-inline-end: 28px;
+  }
+  
+  .header_item::after {
+    content: "";
+    position: absolute;
+    inline-size: 9px;
+    block-size: 9px;
+    background-color: var(--accent-color);
+    border-radius: 50%;
+    filter: drop-shadow(0px 0px 4px #ff0070);
+    inset-block-start: 8px;
+    inset-inline-end: 9px;
+  }
+  
+  .content_list {
+    display: grid;
+    gap: 20px;
+  }
+  .content_list-item {
+    display: grid;
+    gap: 10px;
+  }
+  
+  .content_picture {
+    inline-size: 100%;
+    object-fit: contain;
+    object-position: center;
+  }
+  
+  .article_content {
+    display: grid;
+    margin-block-start: 10px;
+    gap: 6px;
+    margin-block-end: -4px;
+  }
+  
+  .footer {
+    min-block-size: 100vh;
+    display: flex;
     align-items: center;
-    padding: var(--gap, 20px);
-    block-size: 100vh;
-    min-height: 668px;
-}
-
-@media (768px<=width<1024px) {
-
-    .header__theme-menu {
-        justify-self: end;
-        align-self: center;
+    justify-content: center;
+    padding: 10px;
+  }
+  
+  a {
+    text-decoration: none;
+    text-shadow: 2px 1px 0px var(--accent-color);
+  }
+  
+  .header__theme-menu-button:hover {
+    outline: 1px solid rgba(255, 0, 112, 0.4);
+    padding: 0 13px;
+  }
+  
+  .header__theme-menu-button:focus-visible {
+    outline: none;
+    border-bottom: 1px solid var(--section-title-color);
+    inline-size: 66px;
+  }
+  
+  a:hover {
+    border-bottom: 1px solid var(--text-color);
+  }
+  
+  a:focus-visible {
+    outline: 1px solid var(--text-color);
+  }
+  
+  @media (min-width: 768px) {
+    .content-section {
+      padding: 20px 20px;
     }
-
+  }
+  
+  @media (min-width: 768px) {
+    .header_paragraph {
+      inline-size: 50%;
+    }
+  }
+  
+  @media (min-width: 768px) {
+    .decorated-zone::before {
+      inset-inline-end: 20px;
+      inset-block-start: 20px;
+    }
+  }
+  
+  @media (min-width: 768px) {
+    .decorated-zone::after {
+      inset-inline-start: 20px;
+      inset-block-end: 20px;
+    }
+  }
+  
+  @media (min-width: 768px) {
+    .header_title-decoration {
+      margin-inline-start: -20px;
+    }
+  }
+  
+  @media (min-width: 768px) {
+    .content-section-decorated:nth-child(1) {
+      display: grid;
+      grid-template-columns: 1fr 2fr;
+      gap: 20px;
+    }
+  }
+  
+  @media (min-width: 768px) {
+    .content-section {
+      margin-block-end: 40px;
+    }
+  }
+  
+  @media (min-width: 768px) {
+    .section_title {
+      margin-block-end: 0;
+    }
+  }
+  
+  @media (min-width: 768px) {
+    .section_title-decoration {
+      inline-size: calc(100% / 3 - 40px);
+    }
+  }
+  
+  @media (min-width: 768px) {
+    .content-section-decorated:nth-child(2) {
+      display: grid;
+      grid-template-rows: min-content 1fr;
+      gap: 20px;
+    }
+  }
+  
+  @media (min-width: 768px) {
+    .content-section-decorated:nth-child(3) {
+      display: grid;
+      grid-template-columns: 1fr 2fr;
+      gap: 20px;
+    }
+  }
+  
+  @media (min-width: 768px) {
+    .content-section-decorated:nth-child(4) {
+      display: grid;
+      gap: 10px;
+    }
+  }
+  
+  @media (min-width: 768px) {
+    .article_content {
+      display: grid;
+      grid-template-columns:
+        minmax(min-content, max-content) minmax(min-content, max-content)
+        minmax(min-content, max-content);
+      grid-template-rows:
+        minmax(min-content, max-content) minmax(min-content, max-content)
+        minmax(min-content, max-content) minmax(min-content, max-content);
+      gap: 13px 20px;
+      margin-block-end: 2px;
+    }
+  }
+  
+  @media (min-width: 768px) {
+    .content_picture {
+      block-size: 100%;
+      object-fit: cover;
+    }
+  }
+  
+  @media (min-width: 768px) {
+    .picture:nth-child(1) {
+      grid-row: 1 / 2;
+      grid-column: 1 / 3;
+    }
+  }
+  
+  @media (min-width: 768px) {
+    .picture:nth-child(2) {
+      grid-row: 1 / 3;
+      grid-column: 3 / 4;
+    }
+  }
+  
+  @media (min-width: 768px) {
+    .picture:nth-child(3) {
+      grid-row: 2 / 5;
+      grid-column: 1 / 2;
+    }
+  }
+  
+  @media (min-width: 768px) {
+    .picture:nth-child(5) {
+      grid-row: 3 / 5;
+      grid-column: 2 / 4;
+    }
+  }
+  
+  @media (min-width: 768px) {
+    .header_title {
+      font-size: clamp(7.5rem, 0.5625rem + 14.4531vw, 9.8125rem);
+    }
+  }
+  
+  @media (min-width: 1024px) {
+    .content-section-decorated:nth-child(1) {
+      gap: 10px;
+    }
+  }
+  
+  @media (min-width: 1024px) {
+    .content_list-decorated {
+      display: grid;
+      grid-template-columns: repeat(3, 1fr);
+      align-items: start;
+    }
+  }
+  
+  @media (min-width: 1024px) {
+    .content-section-decorated:nth-child(3) {
+      gap: 10px;
+    }
+  }
+  
+  @media (min-width: 1024px) {
+    .header__theme-menu {
+      justify-self: center;
+      align-self: flex-start;
+      margin-block-start: 0;
+    }
+  }
+  
+  @media (min-width: 1024px) {
     .header__theme-menu-list {
-        flex-direction: column;
+      display: grid;
+      grid-template-columns: repeat(3, 1fr);
     }
-
-    .section {
-        gap: 20px;
-    }
-
-    .articles-content {
-        grid-template-columns: 1fr;
-    }
-}
-
-@media (375px<=width<768px) {
-    :root {
-        --gap: 10px;
-    }
-
-    .header__theme-menu {
-        grid-column: 2 / 3;
-    }
-
-    .header__title {
-        margin-inline-start: 0;
-        font-size: clamp(7.25rem, 7.0115rem + 1.0178vw, 7.5rem);
-    }
-
-    .header__text {
-        width: 100%;
-    }
-
-    .header__rec {
-        top: 13px;
-        right: 39px;
-    }
-
-    .section {
-        grid-template-columns: 1fr;
-    }
-
-    .section:not(:last-of-type) {
-        margin-bottom: 50px;
-    }
-
-    .pictures-grid {
-        grid-template-columns: 1fr;
-    }
-
-    .picture-horizontal,
-    .picture-square,
-    .picture-vertical {
-        grid-column: 1/2;
-    }
-
-    .footer__title {
-        font-size: clamp(7.25rem, 7.0115rem + 1.0178vw, 7.5rem);
-    }
+  }
