--- a/styles/style.css
+++ b/styles/style.css
@@ -92,6 +92,11 @@
   .footer_title {
     align-self: center;
     justify-self: flex-start;
+    color: var(--header-color, #db00ff);
+    text-shadow: 4px 4px 0px var(--accent-color);
+    font-size: clamp(7.25rem, 7.0115rem + 1.0178vw, 7.5rem);
+    font-weight: 700;
+    line-height: 82.5%;
   }
   
   .footer_title:last-child {
