--- a/styles/globals.css
+++ b/styles/globals.css
@@ -1,4 +1,5 @@
-/* Глобальные стили для проекта, их можно дополнять и менять по желанию */
+/* Глобальные стили для проекта */
+
 *,
 *::before,
 *::after {
@@ -41,16 +42,6 @@ picture {
   padding: 0;
 }
 
-button,
-a {
-  color: currentColor;
-  font-family: inherit;
-  font-size: inherit;
-  line-height: inherit;
-  text-decoration: none;
-  cursor: pointer;
-}
-
 .decorated-zone::before {
   content: "";
   position: absolute;
@@ -60,6 +51,31 @@ a {
   border-bottom: 1px solid var(--corners-color);
   left: 20px;
   bottom: 20px;
+}
+
+@media (width < 768px) and (width >= 375px) {
+  .decorated-zone::before {
+    left: 10px;
+    bottom: 17px;
+  }
+}
+
+.decorated-zone::after {
+  content: "";
+  position: absolute;
+  width: 25px;
+  height: 25px;
+  border-right: 1px solid var(--corners-color);
+  border-top: 1px solid var(--corners-color);
+  right: 20px;
+  top: 20px;
+}
+
+@media (width < 768px) and (width >= 375px) {
+  .decorated-zone::after {
+    right: 10px;
+    top: 10px;
+  }
 }
 
 .title-decor {
